# ed25519_verification_program

./: Anchor.toml  README.md  package-lock.json  package.json
programs/state-check-program/: Cargo.toml
programs/state-check-program/src/: lib.rs
script/: index.js
tests/: state-check-program.ts
